# firestone

./: .gitignore  Makefile  README.md  VoxelWorld.tscn  environment.tscn  floor.tscn  level.gd  level.gd.uid  level.tscn  plane.tscn  project.godot  scene_controller.gd  scene_controller.gd.uid  splash_screen.png.import
assets/: and_gate.png.import  black_grid.svg.import  blocks.png.import  dirt_block.png.import  orange_grid.png.import  stone_block.png.import  toolbar.png.import  toolbar_selection.png.import
assets/fonts/: victor_mono_medium.ttf.import
assets/models/: blaster-repeater.glb.import  blaster.glb.import  blaster_repeater.glb.import  enemy-flying.glb.import  enemy_flying.glb.import  grass-small.glb.import  grass.glb.import  grass_small.glb.import  platform-large-grass.glb.import  platform.glb.import  platform_large_grass.glb.import  wall-high.glb.import  wall-low.glb.import  wall_high.glb.import  wall_low.glb.import
assets/sounds/: weapon_change.ogg.import
assets/sprites/: burst_animation.tres  crosshair_repeater.png.import  (+6 more)
godot/: RustExtension.gdextension  RustExtension.gdextension.uid  RustExtension.uid  project.godot
materials/: and_block.tres  dirt_block.tres  stone_block.tres
objects/: blaster.tscn  enemy.gd  enemy.tscn  player.gd  player.tscn
rust/: Cargo.toml
rust/firestone_gdext/: Cargo.toml
rust/firestone_gdext/src/: cable.rs  circuit.rs  lib.rs
scenes/: main.tscn
scripts/: audio.gd  weapon.gd
src/: component.rs  floor.tscn  id.rs  lib.rs  player.gd  player.tscn  voxel_world.gd
weapons/: blaster-repeater.tres  blaster.tres
(+146 files in other folders)
